final css update and text edits

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>   
         <div id="artistVideo">
                 <div class="container">
-                <h3 id="youtubeContainerTitle">Music Video Based On Temperature. If video is unavailable, click "Watch on Youtube" link.</h3>
-                <div id="videoContainer">
+                <h3 id="col-7 text">We've picked this song for you today!</h3>
+                <div id="col-7">
                   <iframe id="embedVideoOne" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 </div>
